[package]
name = "hyrax"
version = "0.1.0"
edition = "2021"
authors = ["SirLich"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
filetime = "0.2.22"
path-clean = "1.0.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
walkdir = "2.4.0"
git2 = "0.18.1"
toml = "1.0.3"
tempfile = "3.26.0"
inquire = "0.9.4"
